リンク位置

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10064,6 +10064,10 @@ button:hover {
   width: 60px;
 }
 
+.link {
+  margin-top: 20px;
+}
+
 @media (max-width: 1200px) {
   body {
     width: 85%;
